--- a/src/SoundCardECG/FormMain.resx
+++ b/src/SoundCardECG/FormMain.resx
@@ -123,4 +123,81 @@
   <metadata name="timerRenderGraph.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAKoBAACqAQAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAABwAAADIAAA4SAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAPo3AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        /w8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAADcAAAB2AAAAPwAAFXwAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAA/X0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAD3IQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwAAAHYAAABqAAAajAAANw4AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAD6kAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAPglAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsAAB55AAA8ewAA
+        W3AAAHh1AACaSQAAAAAAAAAAAADuDwAA+CUAAPyjAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAADwEQAA/ygAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOgAA
+        CoQAAA92AAAAGwAAAAAAAJkyAAC7eAAA2WwAAPhvAAD8WAAA+sMAAPkoAAAAAAAAAAAAAO0cAAD/AwAA
+        8jkAAPJMAAD0RAAA8icAAAAAAAD/EAAA9yEAAP8mAAD5KgAA/wkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAACvAAAA/AAAAPwAAABuAAAAAAAAAAAAAAAAAADVBgAA9BgAAP1nAAD7dAAA93sAAP8GAAD/AgAA
+        8IQAAPNuAADxNgAA/wwAAP8LAAD5KAAA+jYAAPozAAD/BgAA/yEAAP8ZAAD/DwAA/wMAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAMoAAAD8AAAA/AAAAIkAAAAAAAAAAAAAAAAAAAAAAAD/AQAA/XgAAPpjAAD1MgAA
+        8z8AAPQtAADvQAAAAAAAAAAAAAAAAAAAAAAAAAAAAADyFAAA/wEAAAAAAAD3IAAA9BgAAP8CAAD/BwAA
+        AAAAAAAAAAAAAAAAAAAAAAACAAAA4wAAAPwAAAD8AAAAogAAAAAAAAAAAAAAAAAAAAAAAAAAAAD7ggAA
+        91sAAP8CAAD0cAAA8GUAAP8KAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPcfAAD/FgAA
+        AAAAAP8GAAAAAAAAAAAAAAAAAAAAAAAAACIAAAD6AAAA/AAAAPwAAAC8AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAPuLAAD5UQAAAAAAAPNuAADweQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        9x4AAPMWAAAAAAAA/wQAAAAAAAAAAAAAAAAAAAAAAAAAUgAAAPwAAAD8AAAA/AAAANcAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAA+pQAAPhIAAAAAAAA/wEAAP8EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAD2HQAA/xQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABtAAAA/AAAAPwAAAD8AAAA8QAA
+        AA4AAAAAAAAAAAAAAAAAAAAAAAD8nQAA9z4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAP8cAAD/EwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB8kJJMZHx7XGR8e1xkf
+        HtcYHRzZFBsYQQAAAAAAAAAAAAAAAAAAAAAAAPymAAD1NQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9h0AAP8QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZXx4d5Oz
+        r/iewbz/nsG8/5GxrOc0PT02AAAAAAAAAAAAAAAAAAAAAAAA+6wAAPktAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/HQAA/w4AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAmbq14cn17//J9e//hqOeoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD6ogAA+CMAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPUaAAD/DAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACZurXhyfXv/8n17/+Go56gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPiWAAD/GgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/xYAAP8KAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAJm6teHJ9e//yfXv/4ajnqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        +YkAAPARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/EgAA
+        /wgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAmbq14cn17//J9e//hqOeoAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAD5fQAA/wgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAP8PAAD/BgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB7lZHmnsC7/57Au/9uhoOrAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAPZUAAD/AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAA/wkAAL8EAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACEoJ/gUGRj/FBkY/zdD
+        Qc0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAmbq14cn1
+        7//J9e//hqOeoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABhdnPreZOP/3mTj/9fc2+0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAEAAAAFgAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAQAAABcAAAAGAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAADhDQvM5RUP/OUVD/0RTUcQAAAAAAAAAAAAAAJYAAAD/AAAA/wAAAP8AAAD/AAAAhgAA
+        AAAAAAAdAAAArwAAAPkAAAD/AAAA8gAAAIMAAAAAAAAAEwAAAKcAAAD1AAAA/wAAAP0AAADTAAAAPQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAgJyXtsn17//C7Of+ZXt5cgAAAAAAAAAAAAAAlgAAAP8AAACIAAAAZgAA
+        AGYAAAA2AAAAAwAAANIAAAD/AAAAlgAAAEoAAAB9AAAAuQAAAAAAAAC/AAAA/wAAAKcAAABDAAAAkwAA
+        AP8AAABhAAAAAAAAAAAAAAAAAAAAAAAAAAB2ko6MyfXv/8Pt5/85SEVDAAAAAAAAAAAAAACWAAAA/wAA
+        ADkAAAAAAAAAAAAAAAAAAAAtAAAA/wAAAMUAAAAAAAAAAAAAAAAAAAAPAAAAHgAAAP8AAADUAAAAAgAA
+        AFoAAACuAAAA/wAAAGEAAAAAAAAAAAAAAAAAAAAAAAAAAIyqpLPJ9e//yfXv/2V7eXIAAAAAAAAAAAAA
+        AJYAAAD/AAAA5QAAAN0AAADdAAAAQAAAAE4AAAD/AAAAlgAAAAAAAAAAAAAAAAAAAAAAAABAAAAA/wAA
+        AKQAAAAAAAAA0wAAAO4AAADuAAAAWgAAAAAAAAAAAAAAAAAAAAAAAAAAfJeUycn17//C7Of+Z3x6igAA
+        AAAAAAAAAAAAlgAAAP8AAACiAAAAiAAAAIgAAAAnAAAAMQAAAP8AAAC6AAAAAAAAAAAAAAAAAAAABAAA
+        ACIAAAD/AAAAygAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAnJycNVGVlW0pb
+        V0wAAAABAAAAAAAAAAAAAACWAAAA/wAAAG4AAABEAAAARAAAACQAAAAEAAAA0QAAAP8AAAB2AAAAKgAA
+        AF8AAACuAAAAAQAAAMoAAAD/AAAAiAAAACMAAAAyAAAAnQAAAFkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJYAAAD/AAAA/wAAAP8AAAD/AAAAhgAAAAAAAAAoAAAAywAA
+        AP8AAAD/AAAA/wAAAKAAAAAAAAAAGwAAAMEAAAD/AAAA/wAAAP8AAADnAAAAPQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFAAAACIAAAAiAAAAIgAAACIAAAASAAAAAAAA
+        AAAAAAAAAAAAHAAAADYAAAAaAAAAAAAAAAAAAAAAAAAAAAAAABIAAAA0AAAAKAAAAAMAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/////8f7/++H+//vg/v/7+Bj/8/hAYEH4cAAA+HgPkPB8D/LwfJ/y8Hy
+        f8/A8//PwPP/z8Dz/8/h8//P4fP/z+Hz/8/h8//P4fP/z+H////h////4f/Hj+GBAgPhgAID4Y44A+GA
+        PEPhgDh74YAAA/+BAgP/gceH//////////8=
+</value>
+  </data>
 </root>
